# kallyan

./: package-lock.json  package.json  tailwind.config.cjs
src/: App.svelte  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src/pages/: configure.svelte
