[package]
name = "kallyan"
version = "0.1.0"
description = "Email client that brings welfare to you"
authors = ["Kingkor Roy Tirtho"]
license = "GPL-3.0"
repository = "https://github.com/KRTirtho/kallyan"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-imap = "0.5.0"
rust-pop3-client = "0.2.1"
new-tokio-smtp = "0.9.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
